# HierarchicalBayesianMultinomialLogit

./: .gitignore  .renvignore  README.md  distribute_analysis_notebooks.py  distribute_label_switching_notebooks.py  distribute_marginal_comparison_notebooks.py  distribute_notebooks.py  execute_analysis_notebooks.py  full_marginal_comparison_template.ipynb  generate_data.py  label_switching_template.ipynb  plot_model_graphs.py  pyproject.toml  rerun_bayesm_analysis.py  restructure_runs.py  run_all_bayesm_experiments.py  run_all_experiments.py  run_single_bayesm_experiment.py  run_single_experiment.py  run_standard_experiment.py  standard_model_comparison_template.ipynb
docs/: mu_delta_parameterization.md
hbmnl_mixture_experiments/1_chain/1_comp/: full_marginal_comparison.ipynb  marginal_comparison.ipynb
hbmnl_mixture_experiments/1_chain/2_comp/: marginal_comparison.ipynb  (+1 more)
hbmnl_normal_experiments/: model_comparison.ipynb
renv/: .gitignore
scripts/: distribute_notebooks.py  execute_analysis_notebooks.py  generate_data.py  plot_model_graphs.py  run_all_experiments.py  run_single_bayesm_experiment.R  run_single_bayesm_experiment.py  run_standard_experiment.py
src/: analysis.py  bayesm_mixture_model.py  dgp.py  label_switching.py  marginal_comparison.py  mixturemodel.py  standardmodel.py
src/inference/: bayesm_gibbs.py  hmc.py  init.py  nuts.py
templates/: analysis_template.ipynb  full_marginal_comparison_template.ipynb  label_switching_template.ipynb  marginal_comparison_template.ipynb  standard_analysis_template.ipynb  standard_model_comparison_template.ipynb
(+52 files in other folders)
