[project]
name = "HierarchicalBayesianMNL"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "graphviz>=0.21",
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
    "liesel>=0.4.1",
    "numpyro>=0.19.0",
    "plotnine>=0.15.1",
    "pyreadr>=0.5.4",
    "tensorflow>=2.20.0",
    "tensorflow-probability>=0.25.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
]